<?xml version="1.0" encoding="utf-8"?>

<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="20dp"
    android:id="@+id/nested_scroll_view">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:layout_editor_absoluteY="81dp">

        <ImageView
            android:id="@+id/iv_movie_poster"
            android:layout_width="150dp"
            android:layout_height="215dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:adjustViewBounds="true"
            android:contentDescription="@string/cd_movie_poster"
            android:scaleType="centerCrop"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_original_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="24dp"
            android:singleLine="false"
            android:textAppearance="@style/TextAppearance.AppCompat.SearchResult.Title"
            app:layout_constrainedWidth="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/iv_movie_poster"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_release_date_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="132dp"
            android:text="@string/label_release_date"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            app:layout_constraintStart_toEndOf="@+id/iv_movie_poster"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_release_date"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="132dp"
            android:layout_marginEnd="24dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/tv_release_date_label"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_rating_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="8dp"
            android:text="@string/label_rating"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            app:layout_constraintStart_toEndOf="@+id/iv_movie_poster"
            app:layout_constraintTop_toBottomOf="@+id/tv_release_date_label" />

        <TextView
            android:id="@+id/tv_user_ratings"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="24dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/tv_rating_label"
            app:layout_constraintTop_toBottomOf="@+id/tv_release_date_label" />

        <ToggleButton
            android:id="@+id/tb_favorite"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginStart="12dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="8dp"
            android:checked="false"
            android:textOff="@string/toggle_text_off"
            android:textOn="@string/toggle_text_on"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/iv_movie_poster"
            app:layout_constraintTop_toBottomOf="@+id/tv_rating_label" />

        <TextView
            android:id="@+id/tv_overview"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="24dp"
            android:singleLine="false"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            app:layout_constrainedWidth="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/iv_movie_poster" />

        <TextView
            android:id="@+id/tv_videos"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="24dp"
            android:gravity="center"
            android:text="@string/video_section_title"
            android:textAppearance="@style/TextAppearance.AppCompat.SearchResult.Title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_overview" />

        <android.support.constraint.ConstraintLayout
            android:id="@+id/v_video_section"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="24dp"
            android:elevation="2dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_videos">

            <android.support.v7.widget.RecyclerView
                android:id="@+id/rv_videos"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </android.support.constraint.ConstraintLayout>

        <TextView
            android:id="@+id/tv_reviews"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="24dp"
            android:gravity="center"
            android:text="@string/reviews_section_title"
            android:textAppearance="@style/TextAppearance.AppCompat.SearchResult.Title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/v_video_section" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/rv_reviews"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="24dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_reviews"
            app:layout_constraintVertical_bias="1.0" />

    </android.support.constraint.ConstraintLayout>

</android.support.v4.widget.NestedScrollView>